--- a/src/main/webapp/WEB-INF/views/phones/edit-phone.html
+++ b/src/main/webapp/WEB-INF/views/phones/edit-phone.html
@@ -1,32 +1,33 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+    <meta http-equiv="Content-Type" content="text/html; charset=UTF-8"/>
     <title>Edit Smartphone</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript">
-        $(document).ready(function() {
-            $('#editSmartphoneForm').submit(function(event) {
+        $(document).ready(function () {
+            $('#editSmartphoneForm').submit(function (event) {
                 var producer = $('#producer').val();
                 var model = $('#model').val();
                 var price = $('#price').val();
-                var json = { "producer" : producer, "model" : model, "price": price};
+                var json = {"producer": producer, "model": model, "price": price};
 
                 $.ajax({
-                    url: $("#editSmartphoneForm").attr( "action"),
+                    url: $("#editSmartphoneForm").attr("action"),
                     data: JSON.stringify(json),
                     type: "POST",
 
-                    beforeSend: function(xhr) {
+                    beforeSend: function (xhr) {
                         xhr.setRequestHeader("Accept", "application/json");
                         xhr.setRequestHeader("Content-Type", "application/json");
                     },
-                    success: function(smartphone) {
+                    success: function (smartphone) {
                         var respContent = "";
 
                         respContent += "<span class='success'>Smartphone was edited: [";
                         respContent += smartphone.producer + " : ";
-                        respContent += smartphone.model + " : " ;
+                        respContent += smartphone.model + " : ";
                         respContent += smartphone.price + "]</span>";
 
                         $("#sPhoneFromResponse").html(respContent);
@@ -38,44 +39,62 @@
 
         });
     </script>
+    <style>
+        container {
+            width: 500px;
+            margin: 150px auto;
+        }
+        .row {
+            padding: 15px 15px 15px;
+        }
+        input {
+            padding: 5px 5px 5px;
+        }
+
+    </style>
 </head>
 <body>
 <div id="container">
-    <h1>Edit Smartphone</h1>
+    <h2>Edit product information</h2>
     <div>
-        <p>Here you can edit Smartphone info:</p>
+        <p>Choose producer then edit price or model</p>
         <div id="sPhoneFromResponse"></div>
     </div>
-    <form id="editSmartphoneForm" th:object="${sPhone}">
-        <table>
-            <tbody>
-            <tr>
-                <td>Producer:</td>
-                <td>
-                    <select id="producer">
-                        <option value="NOKIA">Nokia</option>
-                        <option selected="selected" value="IPHONE">iPhone</option>
-                        <option value="HTC">HTC</option>
-                        <option value="SAMSUNG">Samsung</option>
-                    </select>
-                </td>
-            </tr>
-            <tr>
-                <td>Model:</td>
-                <td><input th:field="*{model}" /></td>
-            </tr>
-            <tr>
-                <td>Price:</td>
-                <td><input th:field="*{price}" /></td>
-            </tr>
-            <tr>
-                <td><input type="submit" value="Edit" /></td>
-                <td></td>
-            </tr>
-            </tbody>
-        </table>
-    </form>
-    <a th:href="@{/smartphones}">List</a>
+    <div class="row">
+        <form id="editSmartphoneForm" th:object="${sPhone}" class="form-group">
+            <div class="col-xs-3">
+                <label for="producer">Producer</label>
+                <select class="form-control" id="producer">
+                    <option value="NOKIA">Nokia</option>
+                    <option selected="selected" value="IPHONE">iPhone Apple</option>
+                    <option value="HTC">HTC</option>
+                    <option value="SAMSUNG">Samsung</option>
+                    <option value="BLACKBERRY">BlackBerry</option>
+                    <option value="SONY">Sony</option>
+                    <option value="ASUS">Asus</option>
+                </select>
+            </div>
+        </form>
+    </div>
+    <div class="row">
+        <div class="col-xs-3">
+            <label for="model">Model</label>
+            <input class="form-controll" id="model" type="text">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-3">
+            <label for="price">Price</label>
+            <input class="form-controll" id="price" type="text">
+        </div>
+    </div>
+    <div class="row">
+        <div class="col-xs-2">
+            <button type="button" class="btn btn-info">Edit</button>
+        </div>
+    </div>
+    <br/>
+    <a th:href="@{/smartphones}">Show List</a>
 </div>
 </body>
 </html>
