--- a/src/main/webapp/WEB-INF/views/phones/new-phone.html
+++ b/src/main/webapp/WEB-INF/views/phones/new-phone.html
@@ -3,6 +3,7 @@
 <head>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
     <title>Create new Smartphone</title>
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
     <script type="text/javascript">
         $(document).ready(function() {
@@ -21,10 +22,10 @@
                     url: "/smartphones/createNew",
                     success: function(smartphone) {
                         var respContent = "";
-                        respContent += "<span class='success'>Smartphone was created:";
+                        respContent += "<span class='success'>Smartphone was created: ";
                         respContent += smartphone.producer + " : ";
                         respContent += smartphone.model + " : " ;
-                        respContent += smartphone.price + " $</span>"
+                        respContent += smartphone.price + "</span>"
                         $("#sPhoneFromResponse").html(respContent);
                     }
                 });
@@ -32,6 +33,15 @@
             });
         });
     </script>
+    <style>
+        #container {
+            width: 500px;
+            margin: 100px auto;
+        }
+        .row {
+            padding: 10px 10px 5px;
+        }
+    </style>
 </head>
 <body>
 <div id="container">
@@ -40,36 +50,40 @@
         <p>Here you can create new Smartphone:</p>
         <div id="sPhoneFromResponse"></div>
     </div>
-    <form id="newSmartphoneForm" th:object="${sPhone}">
-        <table>
-            <tbody>
-            <tr>
-                <td>Producer:</td>
-                <td>
-                    <select id="producer">
-                        <option value="NOKIA">Nokia</option>
-                        <option selected="selected" value="IPHONE">iPhone</option>
-                        <option value="HTC">HTC</option>
-                        <option value="SAMSUNG">Samsung</option>
-                    </select>
-                </td>
-            </tr>
-            <tr>
-                <td>Model:</td>
-                <td><input th:field="*{model}" /></td>
-            </tr>
-            <tr>
-                <td>Price:</td>
-                <td><input th:field="*{price}" /></td>
-            </tr>
-            <tr>
-                <td><input type="submit" value="Create" /></td>
-                <td></td>
-            </tr>
-            </tbody>
-        </table>
+    <form id="newSmartphoneForm" th:object="${sPhone}" class="form-group">
+        <div class="row">
+            <div class="col-xs-4">
+                <label for="producer">Producer</label>
+                <select class="form-control" id="producer">
+                    <option value="NOKIA">Nokia</option>
+                    <option selected="selected" value="IPHONE">iPhone Apple</option>
+                    <option value="HTC">HTC</option>
+                    <option value="SAMSUNG">Samsung</option>
+                    <option value="BLACKBERRY">BlackBerry</option>
+                    <option value="SONY">Sony</option>
+                    <option value="ASUS">Asus</option>
+                </select>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-4">
+                <label for="model">Model</label>
+                <input class="form-control" id="model" th:field="*{model}"/>
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-4">
+                <label for="price">Price</label>
+                <input class="form-control" id="price" th:field="*{price}">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-xs-2">
+                <input type="submit" class="btn btn-info" value="Create"/>
+            </div>
+        </div>
     </form>
-    <a th:href="@{/smartphones}">List</a>
+    <a th:href="@{/smartphones}">Show list</a>
 </div>
 </body>
 </html>
