add function to ask user if wants to delete

--- a/src/main/webapp/WEB-INF/views/phones/all-phones.html
+++ b/src/main/webapp/WEB-INF/views/phones/all-phones.html
@@ -8,28 +8,33 @@
     <script type="text/javascript">
         $(document).ready(function () {
             var deleteLink = $("a:contains('Delete')");
-            $(deleteLink).click(function (event) {
-                $.ajax({
-                    url: $(event.target).attr("href"),
-                    type: "POST",
-                    beforeSend: function (xhr) {
-                        xhr.setRequestHeader("Accept", "application/json");
-                        xhr.setRequestHeader("Content-Type", "application/json");
-                    },
-                    success: function (smartphone) {
-                        var respContent = "";
-                        var rowToDelete = $(event.target).closest("tr");
-                        rowToDelete.remove();
-                        respContent += "<span class='success'>Smartphone was deleted: [";
-                        respContent += smartphone.producer + " : ";
-                        respContent += smartphone.model + " : ";
-                        respContent += smartphone.price + "]</span>";
-                        $("#sPhoneFromResponse").html(respContent);
-                    }
-                });
+            $(deleteLink).bind('click', function() {
+                if (!confirm('are you sure')) {
+                    return false;
+                } else {
+                    $.ajax({
+                        url: $(event.target).attr("href"),
+                        type: "POST",
+                        beforeSend: function (xhr) {
+                            xhr.setRequestHeader("Accept", "application/json");
+                            xhr.setRequestHeader("Content-Type", "application/json");
+                        },
+                        success: function (smartphone) {
+                            var respContent = "";
+                            var rowToDelete = $(event.target).closest("tr");
+                            rowToDelete.remove()    ;
+                            respContent += "<span class='success'>Smartphone was deleted: [";
+                            respContent += smartphone.producer + " : ";
+                            respContent += smartphone.model + " : ";
+                            respContent += smartphone.price + "]</span>";
+                            $("#sPhoneFromResponse").html(respContent);
+                        }
+                    });
 
-                event.preventDefault();
+                    event.preventDefault();
+                }
             });
+
 
         });
     </script>
